import { BrowserTestCase } from '@atlaskit/webdriver-runner/runner';
import {
  editable,
  expectMatchDocument,
  insertMediaFromMediaPicker,
  quickInsert,
  fullpage,
} from '../_helpers';
import {
  mountEditor,
  goToEditorTestingExample,
} from '../../__helpers/testing-example-helpers';
import { selectors } from '../panel/_utils';

[
  {
    skipBrowsers: ['edge', 'ie', 'safari', 'chrome'],
    message: 'Inserts media single before paragraph',
    setup: async (page: any) => {
      await page.type(editable, 'some text');
      await page.keys(Array(9).fill('ArrowLeft'));
    },
  },
  {
    skipBrowsers: ['edge', 'ie', 'safari', 'firefox'],
    message: 'Inserts media single after paragraph',
    setup: async (page: any) => {
      await page.type(editable, 'some text ');
    },
  },
  {
    skipBrowsers: ['edge', 'ie', 'safari', 'chrome'],
    message: 'Inserts media single before paragraph nested in a panel',
    setup: async (page: any) => {
      await quickInsert(page, 'Info panel');
      await page.waitForSelector(selectors.PANEL_EDITOR_CONTAINER);
      await page.type(editable, 'some text');
      await page.keys(Array(9).fill('ArrowLeft'));
    },
  },
  {
    skipBrowsers: ['edge', 'ie', 'safari', 'firefox'],
    message: 'Inserts a media single after paragraph nested in a panel',
    setup: async (page: any) => {
      await quickInsert(page, 'Info panel');
      await page.waitForSelector(selectors.PANEL_EDITOR_CONTAINER);
      await page.type(editable, 'some text ');
    },
  },
].forEach(({ message, setup, skipBrowsers }) => {
  BrowserTestCase(
    `quick-insert-mediaSingle.ts: ${message}`,
    { skip: skipBrowsers as any },
    async (client: any, testName: string) => {
      const page = await goToEditorTestingExample(client);
      await mountEditor(page, {
        appearance: fullpage.appearance,
        media: {
          allowMediaSingle: true,
          allowMediaGroup: true,
        },
        allowPanel: true,
        allowNewInsertionBehaviour: true,
      });

      await page.click(editable);
      await setup(page);

      await quickInsert(page, 'Files & images');
      await insertMediaFromMediaPicker(page);

      await expectMatchDocument(page, testName);
    },
  );
});
