// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quick-insert-mediaSingle.ts: Inserts a media single after paragraph nested in a panel 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "some text ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    Object {
      "attrs": Object {
        "layout": "center",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__fileName": "example.png",
            "collection": "MediaServicesSample",
            "height": 4096,
            "id": "1234-5678-abcd-efgh",
            "type": "file",
            "width": 4096,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`quick-insert-mediaSingle.ts: Inserts media single after paragraph 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "some text ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "center",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__fileName": "example.png",
            "collection": "MediaServicesSample",
            "height": 4096,
            "id": "1234-5678-abcd-efgh",
            "type": "file",
            "width": 4096,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
